--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,27 @@
 annotated-types==0.7.0
 anyio==4.9.0
 bcrypt==4.3.0
+certifi==2025.1.31
 cffi==1.17.1
+charset-normalizer==3.4.1
 click==8.1.8
 cryptography==44.0.2
 fastapi==0.115.12
+filelock==3.18.0
+fsspec==2025.3.2
 greenlet==3.1.1
 h11==0.14.0
 httptools==0.6.4
+huggingface-hub==0.30.2
 idna==3.10
+Jinja2==3.1.6
+joblib==1.4.2
+MarkupSafe==3.0.2
+mpmath==1.3.0
+networkx==3.4.2
+numpy==1.26.4
+packaging==24.2
+pillow==11.2.1
 pycparser==2.22
 pydantic==2.11.3
 pydantic_core==2.33.1
@@ -17,11 +30,24 @@ PyMySQL==1.1.1
 python-dotenv==1.1.0
 python-multipart==0.0.20
 PyYAML==6.0.2
+regex==2024.11.6
+requests==2.32.3
+safetensors==0.5.3
+scikit-learn==1.6.1
+scipy==1.15.2
+sentence-transformers==4.0.2
 sniffio==1.3.1
 SQLAlchemy==2.0.40
 starlette==0.46.1
+sympy==1.13.3
+threadpoolctl==3.6.0
+tokenizers==0.21.1
+torch==2.2.2
+tqdm==4.67.1
+transformers==4.51.2
 typing-inspection==0.4.0
 typing_extensions==4.13.1
+urllib3==2.4.0
 uvicorn==0.34.0
 uvloop==0.21.0
 watchfiles==1.0.5
