--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,7 @@ filelock==3.18.0
 fsspec==2025.3.2
 greenlet==3.1.1
 h11==0.14.0
+hf-xet==1.1.0
 httptools==0.6.4
 huggingface-hub==0.30.2
 idna==3.10
